grammars/taskpaper/test/corpus/basics.txt
================================================================================
Three item kinds
================================================================================
Home:
- buy milk
a note line
--------------------------------------------------------------------------------

(document
  (project
    (text))
  (task
    (marker)
    (text))
  (note
    (text)))

================================================================================
Nesting via tabs
================================================================================
Home:
	- buy milk
		remember the lactose-free one
	- water plants
Work:
	- send report
--------------------------------------------------------------------------------

(document
  (project
    (text)
    (task
      (marker)
      (text)
      (note
        (text)))
    (task
      (marker)
      (text)))
  (project
    (text)
    (task
      (marker)
      (text))))

================================================================================
Multi-level dedent
================================================================================
A:
	B:
		- deep
- top
--------------------------------------------------------------------------------

(document
  (project
    (text)
    (project
      (text)
      (task
        (marker)
        (text))))
  (task
    (marker)
    (text)))

================================================================================
Tags, with and without values
================================================================================
- buy milk @done
- pay rent @due(2026-07-05) @priority(1)
- mixed @flag in the middle
--------------------------------------------------------------------------------

(document
  (task
    (marker)
    (text)
    (tag
      name: (tag_name)))
  (task
    (marker)
    (text)
    (tag
      name: (tag_name)
      value: (tag_value))
    (tag
      name: (tag_name)
      value: (tag_value)))
  (task
    (marker)
    (text)
    (tag
      name: (tag_name))
    (text)))

================================================================================
Project with trailing tags after the colon
================================================================================
Groceries: @errand @due(soon)
	- eggs
--------------------------------------------------------------------------------

(document
  (project
    (text)
    (tag
      name: (tag_name))
    (tag
      name: (tag_name)
      value: (tag_value))
    (task
      (marker)
      (text))))

================================================================================
Colon mid-line is a note, dash without space is a note
================================================================================
see: this is not a project
-not a task
--------------------------------------------------------------------------------

(document
  (note
    (text))
  (note
    (text)))

================================================================================
Line of only tags is a note
================================================================================
@done @waiting
--------------------------------------------------------------------------------

(document
  (note
    (tag
      name: (tag_name))
    (tag
      name: (tag_name))))
