grammars/taskpaper/test/corpus/edge-cases.txt
================================================================================
Blank lines between items do not break nesting
================================================================================
Home:

	- buy milk

	- water plants

Work:
--------------------------------------------------------------------------------

(document
  (project
    (text)
    (task
      (marker)
      (text))
    (task
      (marker)
      (text)))
  (project
    (text)))

================================================================================
No trailing newline
================================================================================
- last line
--------------------------------------------------------------------------------

(document
  (task
    (marker)
    (text)))

================================================================================
Empty task
================================================================================
-
--------------------------------------------------------------------------------

(document
  (task
    (marker)))

================================================================================
Bare dash is a task
================================================================================
-
--------------------------------------------------------------------------------

(document
  (task
    (marker)))

================================================================================
Dedent to a level not on the stack
================================================================================
A:
			- deep
	middle note
--------------------------------------------------------------------------------

(document
  (project
    (text)
    (task
      (marker)
      (text)))
  (note
    (text)))

================================================================================
Leading blank lines
================================================================================

Home:
--------------------------------------------------------------------------------

(document
  (project
    (text)))

================================================================================
Lone at-sign stays text
================================================================================
- email me @ home
--------------------------------------------------------------------------------

(document
  (task
    (marker)
    (text)
    (text)
    (text)))

================================================================================
Project name with colon inside
================================================================================
Re: planning:
	- item
--------------------------------------------------------------------------------

(document
  (project
    (text)
    (task
      (marker)
      (text))))

================================================================================
Empty tag value
================================================================================
- thing @done()
--------------------------------------------------------------------------------

(document
  (task
    (marker)
    (text)
    (tag
      name: (tag_name))))
